# llm-dependency-bot

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MARKETPLACE.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SECURITY.md  action.yml  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PROMPT-ENGINEERING.md  TOOL-USE-GUIDE.md
examples/: advanced-config.yml  basic-usage.yml  monorepo-setup.md
src/: __init__.py  agent.py
tests/: __init__.py  test_agent.py
